# SOES

docs/: Doxyfile.in
soes/: CMakeLists.txt
